--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "9858dce8-4b9c-4096-86af-59216ee4f211"
 authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr> and contributors"]
 version = "0.1.0"
 
+[deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+
 [compat]
+DataStructures = "0.19.1"
 julia = "1"
 
 [extras]
