--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,14 @@ version = "0.1.0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 
 [compat]
+Aqua = "0.8"
 DataStructures = "0.18.22, 0.19.1"
+Test = "<0.0.1, 1"
 julia = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Aqua", "Test"]
